# tint-gear

./: .aider.conf.yml  .gitignore  .prettierrc.yaml  CONVENTIONS.md  LICENSE  README.md  flake.nix  justfile  pyproject.toml
.github/workflows/: check.yml
.helix/: languages.toml
tint_gear/: extract.py  lib.py  main.py  test_lib.py
